--- a/navcss.css
+++ b/navcss.css
@@ -53,3 +53,10 @@ body {
   color: #333;
   border: 1px solid #ddd;
 }
+.container-fluid{
+  padding:0;
+  margin:0;
+}
+.navbar {
+  margin-bottom:0px;
+}
