--- a/views/team.html
+++ b/views/team.html
@@ -2,10 +2,78 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style>
+		.carousel-inner > .item > img,
+		.carousel-inner > .item > a > img {
+			width: 70%;
+			margin: auto;
+		}
+	</style>
 </head>
 <body>
-	<div>
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 col-md-6 col-lg-4">
+							<div id="myCarousel" class="carousel slide" data-ride="carousel">
+								<!-- Indicators -->
+								<ol class="carousel-indicators">
+									<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+									<li data-target="#myCarousel" data-slide-to="1"></li>
+									<li data-target="#myCarousel" data-slide-to="2"></li>
+									<li data-target="#myCarousel" data-slide-to="3"></li>
+								</ol>
 
-	</div>
-</body>
-</html>
+								<!-- Wrapper for slides -->
+								<div class="carousel-inner" role="listbox">
+									<div class="item active">
+										<img src="../img/eddie.png" alt="Eddie">
+										<div class="carousel-caption">
+											<h3>Eddie J</h3>
+											<p>Best around.</p>
+										</div>
+									</div>
+
+									<div class="item">
+										<img src="../img/martin.png" alt="Martin">
+										<div class="carousel-caption">
+											<h3>Martin B</h3>
+											<p>. . .</p>
+										</div>
+									</div>
+
+									<div class="item">
+										<img src="../img/oscar.png" alt="Oscar">
+										<div class="carousel-caption">
+											<h3>Oscar G</h3>
+											<p>. . . </p>
+										</div>
+									</div>
+
+									<div class="item">
+										<img src="../img/emil.png" alt="Emil">
+										<div class="carousel-caption">
+											<h3>Emil F</h3>
+											<p>. . .</p>
+										</div>
+									</div>
+								</div>
+
+								<!-- Left and right controls -->
+								<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+									<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+									<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</body>
+			</html>
