--- a/navcss.css
+++ b/navcss.css
@@ -64,9 +64,12 @@ body {
   border:0px;
 }
   
-@media (min-width: 766px) {
-   .navbar-header {
+@media (max-width: 3000px) {
+    .navbar-header {
         float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
     }
     .navbar-toggle {
         display: block;
@@ -75,12 +78,16 @@ body {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
     .navbar-collapse.collapse {
         display: none!important;
     }
     .navbar-nav {
         float: none!important;
-        margin: 7.5px -15px;
+        margin-top: 7.5px;
     }
     .navbar-nav>li {
         float: none;
@@ -88,5 +95,8 @@ body {
     .navbar-nav>li>a {
         padding-top: 10px;
         padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
     }
 }
