--- a/navcss.css
+++ b/navcss.css
@@ -105,4 +105,15 @@ body {
   color:white;
   margin:0 auto;
   padding-left:50%;
+  padding-top:1.2rem;
+  list-style:none;
+
+}
+
+
+#logoMenu{
+  width:130px;
+  padding-bottom:;
+  vertical-align: middle;
+  margin:0.3em 0em 0.3em 0.3em;
 }
