--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 body{
 	background-color: #2b2d42;
 }
+.col-lg-8, .col-sm-12, .col-xs-12{
+	padding-left: 0px;
+	padding-right: 0px;
+}
 #containercolor{
 	background-color: #f2f2f2;
 }
@@ -20,5 +24,5 @@ body{
   	border: 1px solid #b5b5b5;
 }
 .page-1-title-h1{
-	
+
 }
