--- a/navcss.css
+++ b/navcss.css
@@ -99,6 +99,7 @@ body {
     .collapse.in{
         display:block !important;
     }
+
 }
 
 .liBoot{
@@ -116,4 +117,10 @@ body {
   padding-bottom:;
   vertical-align: middle;
   margin:0.3em 0em 0.3em 0.3em;
+}
+
+#navXlnt{
+  position:fixed;
+  width: 100%;
+  z-index: 99;
 }
