--- a/main.css
+++ b/main.css
@@ -23,6 +23,28 @@ body{
   	margin-top: 0rem;
   	border: 1px solid #b5b5b5;
 }
-.page-1-title-h1{
-
+.page-1-title-h1 {
+  color: white;
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 2em;
+  text-align: center;
+  margin-top: 7rem;
+  padding: 0 0.3em 0 0.3em;
+}
+.orange-page-1 {
+  width: 6rem;
+  height: 0.2rem;
+  background-color: #f26522;
+  margin: 0 auto;
+  margin-top: 4rem;
+}
+.btn-page-1 {
+  padding: 6px 12px;
+  border: 2px solid #b5b5b5;
+  background-color: rgba(0,0,0,0.0);
+  margin: 0 auto;
+  font-size: 1em;
+  color: white;
+  text-decoration: none;
 }
