--- a/views/team.html
+++ b/views/team.html
@@ -3,77 +3,49 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<style>
-		.carousel-inner > .item > img,
-		.carousel-inner > .item > a > img {
-			width: 70%;
-			margin: auto;
-		}
-	</style>
+	<link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+	<link href="../navcss.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../css/team.css">
+	<link rel="stylesheet" type="text/css" href="../main.css">
 </head>
 <body>
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-12 col-md-6 col-lg-4">
-							<div id="myCarousel" class="carousel slide" data-ride="carousel">
-								<!-- Indicators -->
-								<ol class="carousel-indicators">
-									<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-									<li data-target="#myCarousel" data-slide-to="1"></li>
-									<li data-target="#myCarousel" data-slide-to="2"></li>
-									<li data-target="#myCarousel" data-slide-to="3"></li>
-								</ol>
-
-								<!-- Wrapper for slides -->
-								<div class="carousel-inner" role="listbox">
-									<div class="item active">
-										<img src="../img/eddie.png" alt="Eddie">
-										<div class="carousel-caption">
-											<h3>Eddie J</h3>
-											<p>Best around.</p>
-										</div>
-									</div>
-
-									<div class="item">
-										<img src="../img/martin.png" alt="Martin">
-										<div class="carousel-caption">
-											<h3>Martin B</h3>
-											<p>. . .</p>
-										</div>
-									</div>
-
-									<div class="item">
-										<img src="../img/oscar.png" alt="Oscar">
-										<div class="carousel-caption">
-											<h3>Oscar G</h3>
-											<p>. . . </p>
-										</div>
-									</div>
-
-									<div class="item">
-										<img src="../img/emil.png" alt="Emil">
-										<div class="carousel-caption">
-											<h3>Emil F</h3>
-											<p>. . .</p>
-										</div>
-									</div>
-								</div>
-
-								<!-- Left and right controls -->
-								<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-									<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-									<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
-							</div>
-						</div>
-					</div>
+	<!-- NAVBAR -->
+	<aside class="col-lg-2"></aside>
+	<div class="col-lg-8 col-sm-12 col-xs-12 team">
+		<div class="container-fluid">
+			<nav class="navbar navbar-inverse">
+				<div class="navbar-header">
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">My Store</a>
 				</div>
-			</body>
-			</html>
+
+				<div class="collapse navbar-collapse js-navbar-collapse">
+					<li class="liBoot">1</li>
+					<li class="liBoot">2</li>
+					<li class="liBoot">3</li>
+					<li class="liBoot">4</li>
+					<li class="liBoot">5</li>
+					<ul class="dropdown-menu mega-dropdown-menu">		
+					</div><!-- /.nav-collapse -->
+				</nav>
+			</div>
+			<section class="img-slider">
+			
+			</section>
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="../navjs.js"></script>
+	</body>
+	
+</body>
+</html>
