--- a/navcss.css
+++ b/navcss.css
@@ -110,17 +110,17 @@ body {
   list-style:none;
 
 }
-
-
 #logoMenu{
   width:130px;
   padding-bottom:;
   vertical-align: middle;
   margin:0.3em 0em 0.3em 0.3em;
 }
-
-#navXlnt{
-  position:fixed;
-  width: 100%;
-  z-index: 99;
+.centernav{
+  left:16.66%;
+}
+@media (min-width: 768px){
+.centernav{
+  left:0%;
+}
 }
