--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
+
 body{
 	background-color: #2b2d42;
 }
@@ -15,7 +17,7 @@ body{
 }
 .page-1-div{
 	position: relative;
-	top:5rem;
+	top:10rem;
 	width: 80%;
 	height: 80%;
   	background-color: rgba(0,0,0,0.3);
@@ -43,7 +45,6 @@ body{
   padding: 6px 12px;
   border: 2px solid #b5b5b5;
   background-color: rgba(0,0,0,0.0);
-  margin: 0 auto;
   font-size: 1em;
   color: white;
   text-decoration: none;
