removed border hamburger

--- a/navcss.css
+++ b/navcss.css
@@ -65,6 +65,8 @@ body {
     }
     .navbar-toggle {
         display: block;
+        border: none;
+        outline: none;
     }
     .navbar-collapse {
         border-top: 1px solid transparent;
