--- a/navcss.css
+++ b/navcss.css
@@ -135,3 +135,24 @@ body {
   margin-top:7px;
 }
 
+
+
+a {
+  color:white;
+  text-decoration: none;}    
+
+a:visited {
+  color:white;
+  text-decoration: none;
+}  
+
+a:hover {
+  color:white;
+  text-decoration: none;
+} 
+
+a:active {
+  color:white;
+   text-decoration: none;
+}  
+
