--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body{
 	padding-right: 0px;
   border: 3px red solid;
 }
+
 #containercolor{
 	background-color: #f2f2f2;
 }
@@ -87,6 +88,7 @@ body{
   font-size: 2em;
   padding: 4rem 0.3em 0 0.3em;
   margin: 0;
+  text-align: center;
 }
 .orange-line {
   width: 6rem;
