--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ body{
   background-color: rgba(0,0,0,0.0);
   font-size: 1em;
   width: 11rem;
-  margin: 0 auto;
+  margin: 2rem auto;
   color: white;
   text-decoration: none;
 }
@@ -114,13 +114,15 @@ body{
   padding: 0 2em;
 }
 
+
 .btn-page-2 {
   padding: 6px 12px;
   border: 2px solid #b5b5b5;
   background-color: rgba(0,0,0,0.0);
   font-size: 1em;
-  margin: 0 auto;
-  color: #000000;
+  width: 11rem;
+  margin: 2rem auto;
+  color: #000;
   text-decoration: none;
 }
 
