pages 2-5 layed out with rows and columns

--- a/main.css
+++ b/main.css
@@ -124,3 +124,15 @@ body{
   text-decoration: none;
 }
 
+/*PAGE-3*/
+
+.projectImg {
+  width: 100%;
+}
+
+
+/*PAGE-4*/
+
+.teamPic {
+  width: 100%;
+}
