--- a/main.css
+++ b/main.css
@@ -136,6 +136,8 @@ body{
 
 .page-3{
   background-color: #f2f2f2;
+  height: 83rem;
+  padding: 0 0;
 }
 
 .projectImg {
@@ -147,8 +149,20 @@ body{
 
 .page-4{
   background-color: #fafafa;
+  height: 83rem;
+  padding: 0 0;
 }
 
 .teamPic {
   width: 100%;
+}
+
+/*PAGE-5*/
+.page-5{
+  background-color: #f2f2f2;
+  height: 83rem;
+  padding: 0 0;
+}
+form{
+  margin-top: 2rem;
 }
