--- a/css/team.css
+++ b/css/team.css
@@ -9,3 +9,12 @@
   height: 83rem;
 }
 
+.bs-example, .new-caption-area {
+    width: 600px;
+    margin: auto;
+    color: #000;
+  }
+  
+  .carousel-caption {
+  color: #000;
+}
