--- a/main.css
+++ b/main.css
@@ -11,8 +11,7 @@ body{
 }
 .col-lg-8, .col-sm-12, .col-xs-12{
 	padding-left: 0px;
-	padding-right: 0px;
-  border: 3px red solid;
+	padding-right: 0px;  
 }
 
 .container {
@@ -91,8 +90,8 @@ body{
     padding: 0 0;
 }
 
-.page-2-title-h1 {
-  color: #000000;
+.page-h1-black {
+  color: black;
   font-family: "Roboto";
   font-weight: 300;
   font-size: 2em;
@@ -165,4 +164,12 @@ body{
 }
 form{
   margin-top: 2rem;
+}
+.page-p-black{
+  margin: 2rem 0 0 0;
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 0 1.5rem 0 1.5rem;
 }
