--- a/main.css
+++ b/main.css
@@ -68,8 +68,7 @@ body{
   width: 6rem;
   height: 0.2rem;
   background-color: #f26522;
-  margin: 0 auto;
-  margin-top: 4rem;
+  margin: 5rem auto;
 }
 .btn-page-1 {
   padding: 6px 12px;
@@ -96,15 +95,8 @@ body{
   font-weight: 300;
   font-size: 2em;
   padding: 4rem 0.3em 0 0.3em;
-  margin: 0;
+  margin-top: 4rem;
   text-align: center;
-}
-.orange-line {
-  width: 6rem;
-  height: 0.2rem;
-  background-color: #f26522;
-  margin: 0 auto;
-  margin-top: 2rem;
 }
 
 .page-2 img {
@@ -153,6 +145,7 @@ body{
 }
 
 .teamPic {
+  margin-top: 2rem;
   width: 100%;
 }
 
