--- a/main.css
+++ b/main.css
@@ -199,7 +199,13 @@ footer{
   background-color: #e71d36;
   padding: 2rem;
 }
-footer h2, p{
+footer h2{
+  margin-top: 0px;
+  color: white;
+  font-family: "Roboto";
+  font-weight: 300;
+}
+footer p{
   margin-top: 0px;
   color: white;
   font-family: "Roboto";
