--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body{
 /*PAGE-1*/
 
 .page-1 {
- background-image: url("img/stockholm-sweden-winter-blur-lower.jpg");
+ background-image: url("../img/stockholm-sweden-winter-blur-lower.jpg");
  height: 83rem;
  padding: 0 0;
 }
