--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,8 +5,8 @@
     margin: 0;
 }
 .col-lg-8, .col-sm-12, .col-xs-12{
-	padding-left: 0px;
-	padding-right: 0px;
+	padding-left: 0px !important;
+	padding-right: 0px !important;
 }
 .row {
     text-align: center;
@@ -17,49 +17,17 @@ body, html{
     background-color: #2b2d42;
 }
 .container{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 	background-color: #fafafa;
-}
-.responsive-div {
-    width: 6rem;
-    height: 0.2rem;
-    margin: 0 auto;
-    background-color: #f26522;
-}
-.responsive-p{  
-    margin: 2rem 0 0 0;
-    font-family: "Roboto";
-    font-weight: 300;
-    font-size: 1.2rem;
-    text-align: center;
-    padding: 0 1.5rem 0 1.5rem;
-}
-.responsive-h1 {
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 2em;
-  text-align: center;
-  margin-top: 7rem;
-  padding: 0 0.3em 0 0.3em;
-}
-.responsive-h2 {
-    color: #f2f2f2;
-    font-family: "Roboto";
-    font-weight: 300;
-    font-size: 1.5rem;
-    margin: 1rem 0 0 2rem;
 }
 .row img{
     margin: 0 auto;
-    width: 80%;  
+    width: 100%;
+    max-width: 669px;
+    max-height: 490px;
+    left: 50%;
 }
-footer {
-    background-color: #e71d36;
-    height: 15rem;
-    padding: 35px 0 35px 0;
-}
-footer p {
-    color: black;
-    font-family: "Roboto";
-    font-weight: 300;
-    margin: 1rem 0 0 2rem;
+.orange-line{
+    margin:0 auto;
 }
