--- a/views/responsive.html
+++ b/views/responsive.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boot</title>
+    <link href="../css/main.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/responsive.css">
     <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../navcss.css" rel="stylesheet">
+    <link href="../css/navcss.css" rel="stylesheet">
 	  <link rel="icon" href="../img/xlnthead.png">
   </head>
 
@@ -26,7 +27,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <img id="logoMenu" src="img/xlnt-logo-official-new.png">
+         <img id="logoMenu" src="../img/xlnt-logo-official-new.png">
        </div>
 
        <div class="collapse navbar-collapse js-navbar-collapse">
@@ -39,16 +40,46 @@
         </div><!-- /.nav-collapse -->
       </div>
       
-        <h1 class="responsive-h1">Responsiv design!</h1>
-          <div class="responsive-div"></div>
-            <p class="responsive-p">Vi på XLNT Media vet hur viktigt det är att kunna komma åt information över allt, hur som helst med vad som helst.
-              Så när vi skapar webbprojekt så ser vi alltid till att tillgängligheten och användarvänligheten är maximerad oberoende vilket medium man använder.</p>
-              <div class=" row">
-                <img src="../img/content-water-final.png" class="img-responsive" alt="content-water-final">
-              </div>
-            </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <h1 class="page-h1-black">Responsiv design</h1>
+          </div>
         </div>
+           <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <div class="orange-line"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+            <p class="page-p-black">
+              Vi på XLNT Media vet hur viktigt det är att kunna komma åt information över allt, hur som helst med vad som helst.
+              Så när vi skapar webbprojekt så ser vi alltid till att tillgängligheten och användarvänligheten är maximerad oberoende vilket medium man använder.
+            </p>
+          </div>
+        </div>
+              <div class=" row">
+                <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+                <img src="../img/content-water-final.png" class="img-responsive" alt="content-water-final">
+                </div>
+              </div>
 
+
+<!-- FOOTER-->
+  <footer class="col-lg-12">
+    <div class="container-fluid">
+    <h2>Adress</h2>
+    <p>Sjumilaskogen 7</p>
+    <p>1337 - Stockholm</p>
+    <h2>Följ oss</h2>
+    <a class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+    <a class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+    <a class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+    </div>
+  </footer>
+
+
+    </div> <!-- container col-lg-8 col-sm-12 col-xs-12 -->
     <aside class="col-lg-2"></aside>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
