--- a/views/team.html
+++ b/views/team.html
@@ -6,9 +6,9 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-	<link href="../navcss.css" rel="stylesheet">
+	<link href="../css/navcss.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/team.css">
-	<link rel="stylesheet" type="text/css" href="../main.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<title>DA TEAM</title>
 </head>
 <body>
@@ -40,75 +40,82 @@
 					</div><!-- /.nav-collapse -->
 				</div> <!--container-fluid -->
 
-					<div class="container-fluid">
-					<div class="page-2">
+				<div class="container-fluid">
+					<div class="teampage">
 						<!-- SLIDER START -->
-						<section class="team">
-			<h1 class="page-2-title-h1" >XLNT´s Team</h1> 
-			<div id="teamorange" class="orange-page-1"></div><br><br>
-			<div class="slideshow-container">
-				<div class="mySlides fade">
+						<h1 class="page-h1-black" >XLNT´s Team</h1> 
+						<div id="teamorange" class="orange-line"></div><br><br>
+						<div class="slideshow-container">
+							<div class="mySlides fade">
 
-					<img src="../img/oscar.png" style="width:100%" alt="Oscar Gren">
-					<div class="text"></div>
-				</div>
+								<img src="../img/oscar.png" style="width:100%" alt="Oscar Gren">
+								<div class="text"></div>
+							</div>
 
-				<div class="mySlides fade">
+							<div class="mySlides fade">
 
-					<img src="../img/emil.png" style="width:100%" alt="Emil Fjellström">
-					<div class="text"></div>
-				</div>
+								<img src="../img/emil.png" style="width:100%" alt="Emil Fjellström">
+								<div class="text"></div>
+							</div>
 
-				<div class="mySlides fade">
+							<div class="mySlides fade">
 
-					<img src="../img/eddie.png" style="width:100%" alt="Eddie Jostell">
-					<div class="text"></div>
-				</div>
+								<img src="../img/eddie.png" style="width:100%" alt="Eddie Jostell">
+								<div class="text"></div>
+							</div>
 
-				<div class="mySlides fade">
+							<div class="mySlides fade">
 
-					<img src="../img/martin.png" style="width:100%" alt="Martin Blomgren">
-					<div class="text"></div>
-				</div>
+								<img src="../img/martin.png" style="width:100%" alt="Martin Blomgren">
+								<div class="text"></div>
+							</div>
 
-				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-				<a class="next" onclick="plusSlides(1)">&#10095;</a>
-			</div>
-			
+							<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+							<a class="next" onclick="plusSlides(1)">&#10095;</a>
+						</div>
+						
 
-			<div class="dotdotdot" style="text-align:center">
-				<span class="dot" onclick="currentSlide(1)"></span> 
-				<span class="dot" onclick="currentSlide(2)"></span> 
-				<span class="dot" onclick="currentSlide(3)"></span> 
-				<span class="dot" onclick="currentSlide(4)"></span> 
-			</div>
-			<div class="textContainer">
-				<ul class="textList">
-					<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
-						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon">
-					</div></li>
+						<div class="dotdotdot" style="text-align:center">
+							<span class="dot" onclick="currentSlide(1)"></span> 
+							<span class="dot" onclick="currentSlide(2)"></span> 
+							<span class="dot" onclick="currentSlide(3)"></span> 
+							<span class="dot" onclick="currentSlide(4)"></span> 
+						</div>
+						<div class="textContainer">
+							<ul class="textList">
+								<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
+									<h5> Kompetenser </h5>
+									<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon">
+								</div></li>
 
-					<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
-						<h5>Kompetenser</h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/php.png" alt="PHP-icon">
-					</div></li>
+								<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+									<h5>Kompetenser</h5>
+									<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/php.png" alt="PHP-icon">
+								</div></li>
 
-					<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
-						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/ai.png" alt="Adobe-Illustrator-icon"><img class="kompIcon" src="../img/icons/ap.png" alt="Photoshop-icon">
-					</div></li>
+								<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+									<h5> Kompetenser </h5>
+									<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/ai.png" alt="Adobe-Illustrator-icon"><img class="kompIcon" src="../img/icons/ap.png" alt="Photoshop-icon">
+								</div></li>
 
-					<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
-						<h5> Kompetenser </h5>
-						<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/vr.png" alt="VR-icon">
-					</div></li>
-				</ul>
-			</div>
-		</section>
+								<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
+									<h5> Kompetenser </h5>
+									<img class="kompIcon" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="kompIcon" src="../img/icons/css.png" alt="CSS-icon"> <img class="kompIcon" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="kompIcon" src="../img/icons/vr.png" alt="VR-icon">
+								</div></li>
+							</ul>
+						</div>
 						<!-- SLIDER END -->
 					</div>
 					<!-- FOOTER-->
+					<footer class="col-lg-12">
+						<h2>Adress</h2>
+						<p>Sjumilaskogen 7</p>
+						<p>1337 - Stockholm</p>
+						<h2>Följ oss</h2>
+						<a class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+						<a class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</footer>
 				</div> <!--container-fluid -->
 
 
@@ -118,7 +125,8 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 			<script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-			<script src="../navjs.js"></script>
+			
+			<script type="text/javascript" src="../js/team.js"></script>
 		</body>
 
 	</body>
