Oscar är världens bästa mcguyver

--- a/views/team.html
+++ b/views/team.html
@@ -46,25 +46,25 @@
 						<h1 class="page-h1-black" >XLNT´s Team</h1> 
 						<div id="teamorange" class="orange-line"></div><br><br>
 						<div class="slideshow-container">
-							<div class="mySlides fade">
+							<div class="mySlides">
 
 								<img src="../img/oscar.png" style="width:100%" alt="Oscar Gren">
 								<div class="text"></div>
 							</div>
 
-							<div class="mySlides fade">
+							<div class="mySlides">
 
 								<img src="../img/emil.png" style="width:100%" alt="Emil Fjellström">
 								<div class="text"></div>
 							</div>
 
-							<div class="mySlides fade">
+							<div class="mySlides">
 
 								<img src="../img/eddie.png" style="width:100%" alt="Eddie Jostell">
 								<div class="text"></div>
 							</div>
 
-							<div class="mySlides fade">
+							<div class="mySlides">
 
 								<img src="../img/martin.png" style="width:100%" alt="Martin Blomgren">
 								<div class="text"></div>
