team.html slider done and done

--- a/css/team.css
+++ b/css/team.css
@@ -6,7 +6,7 @@
 
 .teampage {
 	background-color: #ffffff;
-  	height: 100rem;
+  	height: 110rem;
   	padding: 0 0;
 }
 
@@ -65,4 +65,12 @@
 }
 .activeTeam, .dot:hover {
   background-color: #717171;
+}
+
+.textList {
+	list-style:  none;
+}
+
+.progIcons{
+  height: 6rem;
 }
