team.html done, footer css moved to footer.css and its linked to all html

--- a/views/projekt.html
+++ b/views/projekt.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../css/projekt.css">
     <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <link href="../css/navcss.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../css/footer.css">
 	  <link rel="icon" href="../img/xlnthead.png">
   </head>
 
