--- a/css/footer.css
+++ b/css/footer.css
@@ -1,1 +1,17 @@
 
+footer{
+  background-color: #e71d36;
+  padding: 2rem;
+}
+footer h2{
+  margin-top: 0px;
+  color: white;
+  font-family: "Roboto";
+  font-weight: 300;
+}
+footer p{
+  margin-top: 0px;
+  color: white;
+  font-family: "Roboto";
+  font-weight: 300;
+}
