--- a/views/team.html
+++ b/views/team.html
@@ -10,6 +10,7 @@
 	<link href="../css/navcss.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/team.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<title>DA TEAM</title>
 </head>
 <body>
@@ -87,25 +88,25 @@
 						</div>
 
 						<div class="row">
-							<div class="col-lg-6 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+							<div class="col-lg-6 col-lg-offset-4 col-sm-6 col-sm-offset-4 col-xs-10 col-xs-offset-2">
 								<div class="textContainer">
 							<ul class="textList">
-								<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
+								<li><div class="myTextSlide"> <h4> Oscar Gren </h4> <h5>VD</h5> <br> <p class="txtStyle">Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella.</p> <br><br>
 									<h5> Kompetenser </h5>
 									<img class="progIcons" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="progIcons" src="../img/icons/css.png" alt="CSS-icon"> <img class="progIcons" src="../img/icons/js.png" alt="JavaScript-icon">
 								</div></li>
 
-								<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+								<li><div class="myTextSlide"> <h4> Emil Fjellström</h4> <h5>Utvecklare</h5> <br> <p class="txtStyle">Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 									<h5>Kompetenser</h5>
 									<img class="progIcons" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="progIcons" src="../img/icons/css.png" alt="CSS-icon"> <img class="progIcons" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="progIcons" src="../img/icons/php.png" alt="PHP-icon">
 								</div></li>
 
-								<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
+								<li><div class="myTextSlide"> <h4> Eddie Jostell</h4> <h5> Utvecklare/Designer</h5> <br> <p class="txtStyle"> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. </p> <br>
 									<h5> Kompetenser </h5>
 									<img class="progIcons" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="progIcons" src="../img/icons/css.png" alt="CSS-icon"> <img class="progIcons" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="progIcons" src="../img/icons/ai.png" alt="Adobe-Illustrator-icon"><img class="progIcons" src="../img/icons/ap.png" alt="Photoshop-icon">
 								</div></li>
 
-								<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
+								<li><div class="myTextSlide"> <h4> Martin Blomgren </h4> <h5>Utvecklare</h5> <br><p class="txtStyle"> Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.</p> <br>
 									<h5> Kompetenser </h5>
 									<img class="progIcons" src="../img/icons/HTML.png" alt="HTML-icon"> <img class="progIcons" src="../img/icons/css.png" alt="CSS-icon"> <img class="progIcons" src="../img/icons/js.png" alt="JavaScript-icon"> <img class="progIcons" src="../img/icons/vr.png" alt="VR-icon">
 								</div></li>
