page-4 back to basic

--- a/scss/main-sass.scss
+++ b/scss/main-sass.scss
@@ -165,14 +165,14 @@ body{
 	background-color: #fafafa;
 	@include page-specs;
 }
-
+/* 
 .p-div {
     width: 80%;
     height: 70%;
     background-color: rgba(0,0,0,0.3);
     margin: 0 auto;
     margin-top: 2rem;
-}
+} */
 
 .page-p-white{
 	@include Robo-font;
