--- a/css/main.css
+++ b/css/main.css
@@ -150,14 +150,14 @@ body {
   padding: 0 0;
 }
 
+/* 
 .p-div {
-  width: 80%;
-  height: 70%;
-  background-color: rgba(0, 0, 0, 0.3);
-  margin: 0 auto;
-  margin-top: 2rem;
-}
-
+    width: 80%;
+    height: 70%;
+    background-color: rgba(0,0,0,0.3);
+    margin: 0 auto;
+    margin-top: 2rem;
+} */
 .page-p-white {
   font-family: "Roboto";
   font-weight: 300;
