--- a/views/projekt.html
+++ b/views/projekt.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boot</title>
     <link href="../css/main.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/projekt.css">
+    <link href="../css/projekt.css" rel="stylesheet">
+    <link href="../bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
     <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <link href="../css/navcss.css" rel="stylesheet">
+    <link href="../css/footer.css" rel="stylesheet">
 	  <link rel="icon" href="../img/xlnthead.png">
   </head>
 
   <body>
-    <aside class="col-lg-2"></aside> 
+    <aside class="col-lg-2"></aside>
+
     <div class="container-fluid col-lg-8 col-sm-12 col-xs-12" id="container">
-          <div class="container-fluid" id="navXlnt">
+    <div class="container-fluid" id="navXlnt">
       <nav class="navbar navbar-inverse navbar-fixed-top col-lg-8 col-sm-12 col-xs-12 centernav">
+
         <div class="navbar-header">
          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
            <span class="sr-only">Toggle navigation</span>
@@ -24,7 +28,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <img id="logoMenu" src="../img/xlnt-logo-official-new.png">
+         <a href="../index.html">  <img id="logoMenu" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
        <div class="collapse navbar-collapse js-navbar-collapse">
@@ -35,31 +39,46 @@
         <li class="liBoot"><a href="#kontaktScroll">Kontakta oss</a></li>
         <ul class="dropdown-menu mega-dropdown-menu">		
         </div><!-- /.nav-collapse -->
-      </div>
+      </div> <!--container-fluid -->
 
       <section><!-- the content -->
-      <h1 class="projekth1">Projekt</h1>
+      <h1 class="page-h1-black text-center">Projekt vi har jobbat på!</h1>
       <div class="orange-line"></div>
       <div class="row">
-          <figure class="col-lg-5 col-sm-12 col-xs-12"><img class="img-responsive" src="../img/youtube.png" alt="Party!"><h1 class="project-h1">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever worked with!"</p></figure>
+          <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/youtube.png" alt="Party!"><h1 class="page-h1-black">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever worked with!"</p></figure>
            <div class="col-lg-2"></div>
-          <figure class="col-lg-5 col-sm-12 col-xs-12"><img class="img-responsive" src="../img/plantify.png" alt="Party!"><h1 class="project-h1">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
+          <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/plantify.png" alt="Party!"><h1 class="page-h1-black">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
            </div>
             
         <div class="row">
-            <figure class="col-lg-5 col-sm-12 col-xs-12"><img class="img-responsive" src="../img/twitch.png" alt="Party!"><h1 class="project-h1">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
+            <figure class="col-lg-5 col-sm-5 col-xs-12"><img class="img-responsive" src="../img/blind.png" alt="Party!"><h1 class="page-h1-black">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
               <div class="col-lg-2"></div>
-            <figure class="col-lg-5 col-sm-12 col-xs-12"><img class="img-responsive" src="../img/blind.png" alt="Party!"><h1 class="project-h1">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
+            <figure class="col-lg-5 col-sm-5 col-xs-12"><img class="img-responsive" src="../img/twitch.png" alt="Party!"><h1 class="page-h1-black">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
               </div>
                      
 
-      <p class="projektp">Vill du bli lika nöjd som våra tidigare kunder?</p>
-          
+      <p class="projektp text-center">Vill du bli lika nöjd som våra tidigare kunder?</p>
+        <div class="row">
+           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+      <a href="views/team.html" class="btn-page-2 btn-black btn-projekt btn-group-justified">Läs mer!</a>
+          </div>
+        </div>
 
+    <!-- FOOTER -->
+<footer class="col-lg-12">
+  <h2>Adress</h2>
+  <p>Sjumilaskogen 7</p>
+  <p>1337 - Stockholm</p>
+  <h2>Följ oss</h2>
+  <a class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+  <a class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+  <a class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+</footer>      
     </div>
     </section> <!-- end of content -->
     
     <aside class="col-lg-2"></aside>
+    <script src="https://use.fontawesome.com/656255a524.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="../navjs.js"></script>
