--- a/views/responsive.html
+++ b/views/responsive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boot</title>
     <link href="../css/main.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/responsive.css">
+    <link href="../css/responsive.css" rel="stylesheet">
     <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
     <link href="../css/navcss.css" rel="stylesheet">
 	  <link rel="icon" href="../img/xlnthead.png">
