--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ body{
   border: 2px solid #b5b5b5;
   background-color: rgba(0,0,0,0.0);
   font-size: 1em;
-  width: 11rem;
+  width: 11rem !important;
   margin: 2rem auto;
   color: #000;
   text-decoration: none;
@@ -180,9 +180,6 @@ form{
   text-align: center;
   padding: 0 1.5rem 0 1.5rem;
 }
-<<<<<<< HEAD
-
-=======
 .form-control{
   max-width: 100%;
   max-height: 200px;
@@ -214,4 +211,3 @@ footer p{
   font-family: "Roboto";
   font-weight: 300;
 }
->>>>>>> 8bc8972b10385d25bcbfc872a6d7f2bb057700d1
