--- a/css/projekt.css
+++ b/css/projekt.css
@@ -9,43 +9,37 @@
 	padding-right: 0px;
 }
 .row {
-    padding: 35px 0;
+    padding-top: 0;
+    padding: 2rem 0;
     margin: 0 auto;
 }
 body, html{
     background-color: #2b2d42;
 }
-#cntfluid{
+#container{
 	background-color: #fafafa;
-}
-.orangediv{
-    width: 6rem;
-    height: 0.2rem;
-    margin: 0 auto;
-    background-color: #f26522;
 }
 .img-responsive {
     width: 100%;
     margin: 0 auto;
-    
-}
-.project-h1{
-	margin: 1rem 0 0 0;
-    font-family: "Roboto";
-    font-weight: 400;
-	font-size: 1.5rem;
-    text-align: center;
-    padding: 0 1.5rem 0 1.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;   
 }
 .project-p{
 	margin: 1rem 0 1rem 0;
     font-family: "Roboto";
     font-weight: 300;
     font-style: italic;
-	font-size: 1rem;
+	font-size: 2rem;
     text-align: center;
     padding: 0 1.5rem 0 1.5rem;
 }
 .centerdiv{
     margin: 0 auto;
+}
+.btn-page-1 {
+  color: black;
+}
+.btn-projekt{
+width:11rem;
 }
