--- a/views/team.html
+++ b/views/team.html
@@ -126,6 +126,7 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 			<script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+			<script src="https://use.fontawesome.com/656255a524.js"></script>
 			
 			<script type="text/javascript" src="../js/team.js"></script>
 		</body>
