rättar till <p> i projekt

--- a/views/projekt.html
+++ b/views/projekt.html
@@ -57,7 +57,7 @@
               </div>
                      
 
-      <p class="projektp text-center">Vill du bli lika nöjd som våra tidigare kunder?</p>
+      <p class="page-p-black">Vill du bli lika nöjd som våra tidigare kunder?</p>
         <div class="row">
            <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
       <a href="views/team.html" class="btn-page-2 btn-black btn-projekt btn-group-justified">Läs mer!</a>
