--- a/views/responsive.html
+++ b/views/responsive.html
@@ -31,15 +31,15 @@
          <a href="../index.html">  <img id="logoMenu" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
-       <div class="collapse navbar-collapse js-navbar-collapse">
-        <li class="liBoot"><a href="#hemScroll">Hem</a></li>
-        <li class="liBoot"><a href="#responsivScroll">Responsiv design</a></li>
-        <li class="liBoot"><a href="#tidigareScroll">Tidigare projekt</a></li>
-        <li class="liBoot"><a href="#teamScroll">Vårat team</a></li>
-        <li class="liBoot"><a href="#kontaktScroll">Kontakta oss</a></li>
-        <ul class="dropdown-menu mega-dropdown-menu">		
-        </div><!-- /.nav-collapse -->
-      </div>
+				<div class="collapse navbar-collapse js-navbar-collapse">
+					<li class="liBoot"><a href="../index.html#hemScroll">Hem</a></li>
+					<li class="liBoot"><a href="../index.html#responsivScroll">Responsiv design</a></li>
+					<li class="liBoot"><a href="../index.html#tidigareScroll">Tidigare projekt</a></li>
+					<li class="liBoot"><a href="../index.html#teamScroll">Vårat team</a></li>
+					<li class="liBoot"><a href="../index.html#kontaktScroll">Kontakta oss</a></li>
+					<ul class="dropdown-menu mega-dropdown-menu">		
+					</div><!-- /.nav-collapse -->
+				</div> <!--container-fluid -->
       
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
