--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,6 +12,8 @@
     text-align: center;
     padding: 35px 0;
     margin: 0 auto;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
 body, html{
     background-color: #2b2d42;
