Validation for all html on xlntBOOT done

--- a/views/projekt.html
+++ b/views/projekt.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Boot</title>
-    <link href="../css/main.css" rel="stylesheet">
-    <link href="../css/projekt.css" rel="stylesheet">
-    <link href="../bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
-    <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../css/navcss.css" rel="stylesheet">
-    <link href="../css/footer.css" rel="stylesheet">
-	  <link rel="icon" href="../img/xlnthead.png">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Boot</title>
+  <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/projekt.css" rel="stylesheet">
+  <link href="../bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
+  <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+  <link href="../css/navcss.css" rel="stylesheet">
+  <link href="../css/footer.css" rel="stylesheet">
+  <link rel="icon" href="../img/xlnthead.png">
+</head>
 
-  <body>
-    <aside class="col-lg-2"></aside>
+<body>
+  <aside class="col-lg-2"></aside>
 
-    <div class="container-fluid col-lg-8 col-sm-12 col-xs-12" id="container">
+  <div class="container-fluid col-lg-8 col-sm-12 col-xs-12" id="container">
     <div class="container-fluid" id="navXlnt">
       <nav class="navbar navbar-inverse navbar-fixed-top col-lg-8 col-sm-12 col-xs-12 centernav">
 
@@ -31,39 +31,40 @@
          <a href="../index.html">  <img id="logoMenu" alt="xlntLogo" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
-				<div class="collapse navbar-collapse js-navbar-collapse">
-					<li class="liBoot"><a href="../index.html#hemScroll">Hem</a></li>
-					<li class="liBoot"><a href="../index.html#responsivScroll">Responsiv design</a></li>
-					<li class="liBoot"><a href="../index.html#tidigareScroll">Tidigare projekt</a></li>
-					<li class="liBoot"><a href="../index.html#teamScroll">Vårat team</a></li>
-					<li class="liBoot"><a href="../index.html#kontaktScroll">Kontakta oss</a></li>
-					<ul class="dropdown-menu mega-dropdown-menu">		
-					</div><!-- /.nav-collapse -->
-				</div> <!--container-fluid -->
-      </nav>
-      <section><!-- the content -->
-      <h1 class="page-h1-black text-center">Projekt vi har jobbat på!</h1>
-      <div class="orange-line"></div>
-      <div class="row"><!-- first row img -->
-          <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/youtube.png" alt="Party!"><h1 class="page-h1-black h1-padding">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever worked with!"</p></figure>
-           <div class="col-lg-2"></div>
-          <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/plantify.png" alt="Party!"><h1 class="page-h1-black h1-padding">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
-           </div>
-            
-        <div class="row"><!-- second row img -->
-            <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/blind.png" alt="Party!"><h1 class="page-h1-black h1-padding">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
-              <div class="col-lg-2"></div>
-            <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/twitch.png" alt="Party!"><h1 class="page-h1-black h1-padding">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
-              </div>
-                     
-      <p class="page-p-black">Vill du bli lika nöjd som våra tidigare kunder?</p>
-        <div class="row">
-           <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
+       <div class="collapse navbar-collapse js-navbar-collapse">
+         <li class="liBoot"><a href="../index.html#hemScroll">Hem</a></li>
+         <li class="liBoot"><a href="../index.html#responsivScroll">Responsiv design</a></li>
+         <li class="liBoot"><a href="../index.html#tidigareScroll">Tidigare projekt</a></li>
+         <li class="liBoot"><a href="../index.html#teamScroll">Vårat team</a></li>
+         <li class="liBoot"><a href="../index.html#kontaktScroll">Kontakta oss</a></li>
+         <ul class="dropdown-menu mega-dropdown-menu"></ul>	
+       </div><!-- /.nav-collapse -->
+     </nav>
+   </div> <!--container-fluid -->
+   
+   <section><!-- the content -->
+    <h1 class="page-h1-black text-center">Projekt vi har jobbat på!</h1>
+    <div class="orange-line"></div>
+    <div class="row"><!-- first row img -->
+      <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/youtube.png" alt="Party!"><h1 class="page-h1-black h1-padding">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever worked with!"</p></figure>
+      <div class="col-lg-2"></div>
+      <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/plantify.png" alt="Party!"><h1 class="page-h1-black h1-padding">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
+    </div>
+    
+    <div class="row"><!-- second row img -->
+      <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/blind.png" alt="Party!"><h1 class="page-h1-black h1-padding">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
+      <div class="col-lg-2"></div>
+      <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/twitch.png" alt="Party!"><h1 class="page-h1-black h1-padding">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
+    </div>
+    
+    <p class="page-p-black">Vill du bli lika nöjd som våra tidigare kunder?</p>
+    <div class="row">
+     <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
       <a href="../index.html#kontaktDirekt" class="btn-page-2 btn-black btn-projekt btn-group-justified">Kontakta oss!</a>
-          </div>
-        </div>
-
-    <!-- FOOTER -->
+    </div>
+  </div>
+</section> <!-- end of content -->
+<!-- FOOTER -->
 <footer class="col-lg-12">
   <h2>Adress</h2>
   <p>Sjumilaskogen 7</p>
@@ -73,15 +74,14 @@
   <a class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
   <a class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
 </footer>      
-    </div>
-    </section> <!-- end of content -->
-    
-    <aside class="col-lg-2"></aside>
-    <script src="https://use.fontawesome.com/656255a524.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-    <script src="../navjs.js"></script>
-  </body>
+</div>
+
+
+<aside class="col-lg-2"></aside>
+<script src="https://use.fontawesome.com/656255a524.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="../navjs.js"></script>
+</body>
 </html>
 
-      
