--- a/views/responsive.html
+++ b/views/responsive.html
@@ -37,8 +37,9 @@
 					<li class="liBoot"><a href="../index.html#tidigareScroll">Tidigare projekt</a></li>
 					<li class="liBoot"><a href="../index.html#teamScroll">Vårat team</a></li>
 					<li class="liBoot"><a href="../index.html#kontaktScroll">Kontakta oss</a></li>
-					<ul class="dropdown-menu mega-dropdown-menu">		
+					<ul class="dropdown-menu mega-dropdown-menu"></ul>
 					</div><!-- /.nav-collapse -->
+          </nav>
 				</div> <!--container-fluid -->
       
         <div class="row">
