--- a/views/team.html
+++ b/views/team.html
@@ -38,8 +38,9 @@
 					<li class="liBoot"><a href="../index.html#tidigareScroll">Tidigare projekt</a></li>
 					<li class="liBoot"><a href="../index.html#teamScroll">Vårat team</a></li>
 					<li class="liBoot"><a href="../index.html#kontaktScroll">Kontakta oss</a></li>
-					<ul class="dropdown-menu mega-dropdown-menu">		
+					<ul class="dropdown-menu mega-dropdown-menu"></ul>		
 					</div><!-- /.nav-collapse -->
+					</nav>
 				</div> <!--container-fluid -->
 
 				<div class="container-fluid">
@@ -139,7 +140,5 @@
 			<script src="https://use.fontawesome.com/656255a524.js"></script>
 			
 			<script type="text/javascript" src="../js/team.js"></script>
-		</body>
-
 	</body>
 	</html>
