--- a/views/team.html
+++ b/views/team.html
@@ -6,7 +6,7 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="../bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
-	<link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+	<link href="../bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../css/navcss.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/team.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -135,7 +135,7 @@
 			</div> <!-- class="col-lg-8 col-sm-12 col-xs-12 -->
 			<aside class="col-lg-2"></aside> 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-			<script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+			<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="https://use.fontawesome.com/656255a524.js"></script>
 			
