All titles match

--- a/views/team.html
+++ b/views/team.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/team.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/footer.css">
-	<title>DA TEAM</title>
+	<title>XLNT-BOOT</title>
 </head>
 <body>
 	<!-- NAVBAR -->
