--- a/views/projekt.html
+++ b/views/projekt.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Boot</title>
+  <title>XLNT-BOOT</title>
   <link href="../css/main.css" rel="stylesheet">
   <link href="../css/projekt.css" rel="stylesheet">
   <link href="../bootstrap-social-gh-pages/assets/bootstrap-social.css" rel="stylesheet">
